# mcp-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TASK.md  mcpm.py  pyproject.toml
.github/workflows/: test.yml
docs/: 01-architecture.md  02-data-models.md  03-api-reference.md  04-module-design.md  05-error-handling.md  06-security.md  07-testing.md  08-deployment.md
src/mcp_manager/: __init__.py  backup.py  cli.py  config.py  constants.py  exceptions.py  file_handler.py  health.py  models.py  py.typed  templates.py  utils.py  validators.py
src/mcp_manager/templates/: fetch.json  filesystem.json  github.json  time.json
tests/: conftest.py
tests/unit/: test_backup.py  test_cli.py  test_config.py  test_constants.py  test_exceptions.py  test_file_handler.py  test_health.py  test_models.py  test_templates.py  test_utils.py  test_validators.py
